Add password recovery functionality

--- a/recoveryInstructions.html
+++ b/recoveryInstructions.html
@@ -32,10 +32,10 @@
     POST request: localhost:3000/api/v1/auth/recovery/&lt;token&gt;
 
     <form method="post">
-      <label for="password">Password: </label>
-      <input type="text" name="password" id="password" />
-      <label for="password">Confirm password: </label>
-      <input type="text" name="confirmPassword" id="confirmPassword" />
+      <label for="newPassword">Password: </label>
+      <input type="text" name="newPassword" id="newPassword" />
+      <label for="confirmNewPassword">Confirm password: </label>
+      <input type="text" name="confirmNewPassword" id="confirmNewPassword" />
       <button type="submit">Submit</button>
     </form>
   </body>
